objects/Individual_Employee_Assignments__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Region__c</fullName>
        <label>Home Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>Apps Dedicated Solutioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPO Dedicated Solutioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Sales Enablement (GSE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITO Dedicated Solutioning (GSID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales, NBA, HR, Legal, Other BSU</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Hours__c</fullName>
        <label>Requested Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Level__c</fullName>
        <label>Required Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Request__c</fullName>
        <label>Support Request</label>
        <referenceTo>Support_Request__c</referenceTo>
        <relationshipName>Individual_Employee_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Tracking_Tool__c</fullName>
        <label>Time Tracking Tool</label>
        <picklist>
            <picklistValues>
                <fullName>Compass CATW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMEGA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource Requests</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IEA-{000000}</displayFormat>
        <label>Individual Employee Assignments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <recordTypes>
        <fullName>ES_WBS_Code</fullName>
        <active>true</active>
        <label>ES WBS Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>PS_Delivery_Resource</fullName>
        <active>true</active>
        <label>PS Delivery Resource</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>